Fix bottom scrollbar appearing

--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,9 @@
   src: URL("/assets/fonts/Bonobo Regular.ttf") format("truetype");
 }
 
-html {
-  width: 100vw;
-  height: 100vh;
+body {
+  width: 100%;
+  height: 100%;
   margin: 0;
   padding: 0;
   background: #2e313d;
